syntax = "proto3";

package org.corfudb.infrastructure.logreplication.proto;

// Multi-Cluster Topology configuration
message TopologyConfigurationMsg {
  uint64 topologyConfigID = 1;   // This ID tracks changes in the topology configuration
  uint64 version = 2;            // The version of ... (TODO: @maxi, can you add description?)
  repeated ClusterConfigurationMsg clusters = 3;
  string certs = 4;
}

// Cluster (site) configuration
message ClusterConfigurationMsg {
  string name = 1;
  ClusterRole role = 2;
  string id = 3;
  repeated NodeConfigurationMsg node_info = 4;
  uint32 corfu_port = 5;
}

// Node configuration metadata
message NodeConfigurationMsg {
  string connection_id = 1;
  string address = 2;
  int32 port = 3;
  string node_id = 4;
}

enum ClusterRole {
  INVALID = 0;
  ACTIVE = 1;
  STANDBY = 2;
  NONE = 3;
}

